--- a/index.html
+++ b/index.html
@@ -132,13 +132,33 @@ function computeScore(formData){
 }
 
 async function submitToSheet(payload){
-  // Evitamos preflight CORS: no enviamos Content-Type JSON explícito.
-  // Apps Script leerá e.postData.contents (text/plain) y lo parseará como JSON.
-  const res = await fetch(APPS_SCRIPT_URL, {
-    method: 'POST',
-    body: JSON.stringify(payload)
-  });
-  return res.json();
+  // Enviar por POST tradicional (form-urlencoded) para evitar CORS.
+  // Creamos un <form> dinámico y lo enviamos a APPS_SCRIPT_URL.
+  const form = document.createElement('form');
+  form.action = APPS_SCRIPT_URL;
+  form.method = 'POST';
+  form.style.display = 'none';
+
+  const addField = (name, value) => {
+    const input = document.createElement('input');
+    input.type = 'hidden';
+    input.name = name;
+    input.value = typeof value === 'string' ? value : JSON.stringify(value);
+    form.appendChild(input);
+  };
+
+  addField('token', payload.token);
+  addField('studentName', payload.studentName);
+  addField('score', String(payload.score));
+  addField('answers', payload.answers); // JSON string
+  addField('ua', payload.ua);
+  addField('tsClient', payload.tsClient);
+
+  document.body.appendChild(form);
+  form.submit();
+
+  // No podemos leer respuesta (otra origen), pero asumimos entrega OK si no hay error de navegación.
+  return { ok: true };
 }
 
 const form = document.getElementById('quizForm');
